Updated code from Sigstore Community Day
